tests/tooling/fixtures/native/recovery/negative/negative_assignment_parser_missing_rhs.objc3
// Expected diagnostic code(s): O3P103.
module NegativeAssignmentParserMissingRhs;

fn main() -> i32 {
  let value = 0;
  value = ;
  return value;
}
